# LemonOS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.docker  README.md  SECURITY.md  bochs.bxrc  bootstrap.yml  build  build.ninja  build_wsl  buildinitrd.sh  clean  configure.sh  convertinitrd.sh  copytodisk.bat  copytodisk.sh  debug  docker-make  gcc  initrd.img  initrd.ld  lemon-crossfile.txt  meson.build  mount.bat  mount.cfg  mount.sh  readDir  run  run_bochs  run_win  unmount.bat  unmount.sh
Applications/: meson.build
Applications/AudioPlayer/: AudioContext.cpp  AudioContext.h  AudioTrack.h  Main.cpp
Applications/CHIP8Emu/: main.cpp
Applications/Debugger/: LemonDebug.cpp
Applications/DeviceManager/: main.cpp
Applications/Draw/: build.sh  main.cpp
Applications/FSTest/: main.cpp
Applications/FileManager/: build.sh  dump.txt  fm.lef  main.cpp
Applications/GUITest/: build.sh  main.cpp
Applications/IPCTest/: main.cpp
Applications/ImageViewer/: main.cpp
Applications/ImgView/: main.cpp
Applications/Init/: build.sh  clip.h  init.asm  init.lef  input.cpp  input.h  list.h  main.c  main.cpp  main.h  test.txt  window.cpp  window.h
Applications/JSONDump/: main.cpp
Applications/LSh/: build.sh  main.cpp
Applications/LemonMonitor/: main.cpp
Applications/LemonPaint/: brush.cpp  canvas.cpp  main.cpp  paint.h
Applications/LemonWM/: compositor.cpp  input.cpp  lemonwm.h  main.cpp  window.cpp  wm.cpp
Applications/Minesweeper/: main.cpp
Applications/NetworkGovernor/: dhcp.h
Applications/PosixThreadTest/: main.cpp
Applications/Run/: main.cpp
Applications/SDLTest/: main.cpp
Applications/Shell/: build.sh  list.h  main.cpp  menu.cpp  shell.cpp  shell.h  shell.lef
Applications/Snake/: build.sh  main.cpp  snake.asm  snake.lef
Applications/SocketTest/: client.cpp  defines.h  server.cpp
Applications/Solitaire/: build.sh  main.cpp
Applications/Steal/: main.cpp
Applications/SysInfo/: main.cpp
Applications/SystemInfo/: build.sh
Applications/Taskbar/: main.cpp
Applications/Terminal/: build.sh  colours.h  escape.h  main.cpp
Applications/TerminalEmulator/: build.sh  main.cpp
Applications/Tests/: Audio.h  Main.cpp  Pipe.h  Syscall.h  Terminal.h
Applications/TextEdit/: build.sh  exttextbox.cpp  exttextbox.h  main.cpp
Applications/TextEditor/: build.sh
Applications/VideoPlayer/: Main.cpp  StreamContext.cpp  StreamContext.h
Applications/Welcome/: Main.cpp
Applications/calculator/: main.cpp
Applications/credits/: main.cpp
Kernel/: CMakeLists.txt  bintoelf.sh  linkscript-x86.ld  linkscript-x86_64.ld  makefile  meson.build  modules.cfg  run
Kernel/Modules/: CMakeLists.txt  README.md  meson.build
Kernel/include/: ABI  CharacterBuffer.h  Device.h  Endian.h  Error.h  Framebuffer.h  Hash.h  List.h  Lock.h  Logging.h  Math.h  MiscHdr.h  Move.h  PTY.h  RefPtr.h  RingBuffer.h  SharedMemory.h  Signal.h  Spinlock.h  Stream.h  String.h  StringView.h  TTraits.h  TimerEvent.h  UserIO.h  UserPointer.h  Vector.h  abi  ahci.h  assert.h  ata.h  atadrive.h  characterbuffer.h  device.h  devicemanager.h  endian.h  errno.h  fat32.h  fb.h  filesystem.h  (+31 more)
Kernel/src/: 8254x.cpp  Assert.cpp  CharacterBuffer.cpp  Debug.cpp  Device.cpp  Hash.cpp  Kernel.cpp  Lemon.cpp  Lock.cpp  Logging.cpp  Math.cpp  Panic.cpp  Runtime.cpp  SharedMemory.cpp  Streams.cpp  String.cpp  UserIO.cpp  ahci.cpp  assert.cpp  characterbuffer.cpp  debug.cpp  device.cpp  devicemanager.cpp  gpt.cpp  gui.cpp  kernel.cpp  lemon.cpp  lock.cpp  logging.cpp  math.cpp  nvme.cpp  panic.cpp  runtime.cpp  sharedmem.cpp  streams.cpp  string.cpp  video.cpp  videoconsole.cpp
Kernel/subprojects/: frigg.wrap  lai.wrap
LibGUI/: CMakeLists.txt  meson.build
LibGUI/src/: Colours.cpp  FileDialog.cpp  FileView.cpp  MessageBox.cpp  Theme.cpp  Widgets.cpp  Window.cpp  WindowServer.cpp  filedialog.cpp  fileview.cpp  messagebox.cpp  widgets.cpp  window.cpp
LibLemon/: CMakeLists.txt  makefile  meson.build
LibLemon/gfx_old/: sse2.asm
LibLemon/include/: list.h  runtime.h
LibLemon/src/: ConfigManager.cpp  IconManager.cpp  Logger.cpp  Serializable.cpp  Unicode.cpp  cfgparser.cpp  configmgr.cpp  fb.cpp  filesystem.cpp  info.cpp  ipc.cpp  json.cpp  lexer.cpp  runtime.cpp  sha.cpp  sharedmem.cpp  spawn.cpp  url.cpp  util.cpp
LibLemon/subprojects/: json.wrap
System/: CMakeLists.txt  meson.build
System/FTerm/: colours.h  escape.h  fterm.h  input.cpp  main.cpp
System/KMod/: Main.cpp
System/LemonWM/: Compositor.cpp  Compositor.h  Input.cpp  Main.cpp  WM.cpp  WM.h  Window.cpp  Window.h  compositor.cpp  input.cpp  interface.li  lemonwm.h  main.cpp  meson.build  window.cpp  winrect.h  wm.cpp
System/Lemond/: main.cpp
System/Login/: main.cpp
System/LoginFrontend/: main.cpp
System/NetworkGovernor/: dhcp.h  endian.h  main.cpp
System/SystemService/: main.cpp
Utilities/: CMakeLists.txt  hexdump.cpp  ls.cpp  meson.build  playaudio.cpp  ps.cpp  uname.cpp
apps/: CMakeLists.txt
apps/AudioPlayer/: AudioContext.h
apps/DeviceManager/: main.cpp
apps/FileManager/: main.cpp
apps/GUITest/: main.cpp
apps/GraphicsTest/: main.cpp
apps/IPCTest/: main.cpp
apps/LemonMonitor/: main.cpp
apps/Run/: main.cpp
apps/SignalTest/: main.c
apps/Snake/: main.cpp
apps/Steal/: main.cpp
apps/Terminal/: escape.h
apps/Tests/: Main.cpp  Terminal.h
apps/VideoPlayer/: Main.cpp
apps/core/: CMakeLists.txt
apps/demos/: CMakeLists.txt
apps/games/: CMakeLists.txt
apps/lsh/: CMakeLists.txt  main.cpp
apps/media/: CMakeLists.txt
apps/servers/: CMakeLists.txt
apps/system/: CMakeLists.txt
apps/tests/: Audio.h  CMakeLists.txt  Test.h
apps/utilities/: CMakeLists.txt  README.md  cat.cpp  echo.cpp  kmod.cpp  lemonfetch.cpp  ls.cpp  playaudio.cpp  ps.cpp  uname.cpp
kernel/: CMakeLists.txt  README.md  assert.h  main.cpp
kernel/hiraku/: syscalls.cpp
kernel/include/: CString.h  Device.h  Errno.h  Error.h  Framebuffer.h  Lemon.h  Logging.h  SharedMemory.h  Stream.h  TTraits.h  abi
kernel/mm/: address_space.cpp  address_space.h  frame_table.cpp  frame_table.h  prot.h  (+4 more)
(+1400 files in other folders)
